--- a/SampleCJ/src/app/firms-list/firms-list.component.scss
+++ b/SampleCJ/src/app/firms-list/firms-list.component.scss
@@ -7,6 +7,7 @@
 
 .firm-list-header {
     justify-content: space-between;
+    margin-bottom: 4px;
 }
 
 h2 {
@@ -14,7 +15,7 @@ h2 {
 }
 
 .search-field {
-    width: 100%;
+    width: 40%;
 }
 
 table {
@@ -25,8 +26,17 @@ th.mat-header-cell {
     padding: 8px 5px 5px;
 
     & mat-form-field {
-        max-width: 160px;
+        max-width: 150px;
     }
+}
+
+tr.mat-row:hover{
+    cursor: pointer;
+    background-color: rgba($color: #000000, $alpha: 0.05);
+}
+
+tr.mat-row:focus{
+    outline: none;
 }
 
 @media screen and (max-width: 700px) {
@@ -34,6 +44,9 @@ th.mat-header-cell {
         padding: 16px;
     }
 
+    .search-field{
+        width: 100%;
+    }
     .table-responsive {
         padding: 0 12px;
 
