--- a/SampleCJ/src/app/work-flow/work-flow.component.html
+++ b/SampleCJ/src/app/work-flow/work-flow.component.html
@@ -20,30 +20,30 @@
     </div>
 
     <div class="mat-elevation-z8 table-responsive">
-        <table mat-table [dataSource]="dataSource">
+        <table mat-table [dataSource]="dataSource" matSort #sort="matSort">
 
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef> Name </th>
+            <ng-container matColumnDef="name" >
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
             </ng-container>
 
             <ng-container matColumnDef="status">
-                <th mat-header-cell *matHeaderCellDef> Status </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
                 <td mat-cell *matCellDef="let element"> {{element.status}} </td>
             </ng-container>
 
             <ng-container matColumnDef="usage">
-                <th mat-header-cell *matHeaderCellDef> Usage </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Usage </th>
                 <td mat-cell *matCellDef="let element"> {{element.usage}} </td>
             </ng-container>
 
             <ng-container matColumnDef="tags">
-                <th mat-header-cell *matHeaderCellDef> Tags </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Tags </th>
                 <td mat-cell *matCellDef="let element"> {{element.tags}} </td>
             </ng-container>
 
             <ng-container matColumnDef="createdDate">
-                <th mat-header-cell *matHeaderCellDef> Date Created </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Date Created </th>
                 <td mat-cell *matCellDef="let element"> {{element.createdDate}} </td>
             </ng-container>
 
